crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_list_view_status_line_after_export.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
assertion_line: 1298
expression: "render_to_text(&state, snapshot_now(), 80, 12)"
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ GitHub (ben@example.com)            914 994  ██████░░░░   18s  ↪   255 062 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ Exported to ~/exports/paladin-export.json.                                   │
└──────────────────────────────────────────────────────────────────────────────┘
