crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_list_view_status_line_after_manual_add_no_color.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
assertion_line: 955
expression: "render_to_styled_text(&state, snapshot_now(), true, 80, 12)"
---
┌ Paladin ─────────────────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ GitHub (ben@example.com)            914 994   ██████░░░░   18s             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ Added GitHub:ben@example.com.                                                │
└──────────────────────────────────────────────────────────────────────────────┘
─── styles ───
(none)
